add result blocks

--- a/index.html
+++ b/index.html
@@ -179,8 +179,51 @@
             <div class="wrapper-line"></div>
             <!-- Strart result blocks -->
             <div class="wrapper-result">
-                <div class="wrapper-result-block1"></div>
-                <div class="wrapper-result-block2"></div>
+                <div class="wrapper-result-block">
+                    <div class="result-block-wrapper">
+                        <div class="result-block-wrapper-title">
+                            <p class="result-title">Намотка джамбо готового полуфабриката вспомогательные операции</p>
+                        </div>
+                        <div class="result-block-wrapper-answer">
+                            <p class="result-title">0</p>
+                        </div>
+                    </div>
+                    <div class="result-block-wrapper">
+                        <div class="result-block-wrapper-title">
+                            <p class="result-title">Время производства одного джамбо, включая вспомогательные операции, исключая ежесменные операции</p>
+                        </div>
+                        <div class="result-block-wrapper-answer">
+                            <p class="result-title">0</p>
+                        </div>
+                    </div>
+                    <div class="result-block-wrapper">
+                        <div class="result-block-wrapper-title">
+                            <p class="result-title">Коэффициент для учета влияния ежесменных операций </p>
+                        </div>
+                        <div class="result-block-wrapper-answer">
+                            <p class="result-title">0</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrapper-result-block">
+                    <div class="result-block-wrapper">
+                        <div class="result-block-wrapper-title">
+                            <p class="result-title">Время производства одного джамбо в минутах с учётом коэффициента</p>
+                        </div>
+                        <div class="result-block-wrapper-answer">
+                            <p class="result-title">0</p>
+                        </div>
+                    </div>
+                    <div class="result-block-wrapper">
+                        <div class="result-block-wrapper-title">
+                            <p class="result-title">Производительность в погонных метрах за смену</p>
+                        </div>
+                        <div class="result-block-wrapper-answer">
+                            <p class="result-title">0</p>
+                        </div>
+                    </div>
+                    <input type="button" value="Выгрузить pdf-файл" class="wrapper-result-block-btn">
+                </div>
             </div>
             <!-- End result blocks -->
         </div>
