loyout is ready and start doing functions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <p class="txt">Время нагрева бочки с клеем, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T1">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -36,7 +36,7 @@
                             <p class="txt">Время демонтажа шпули из-под пленки и монтажа новой пленки со склейкой, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T2">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -44,7 +44,7 @@
                             <p class="txt">Время демонтажа шпули из-под лайнера и монтажа нового лайнера со склейкой, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T3">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -52,7 +52,7 @@
                             <p class="txt">Количество клея в бочке, кг</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="11" class="inp" id="N1">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -60,7 +60,7 @@
                             <p class="txt">Намотка пленки в джамбо, пог.м</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="N2">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -68,7 +68,7 @@
                             <p class="txt">Намотка лайнера в джамбо, пог.м</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="N3">
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                             <p class="txt">Намотка готового полуфабриката, пог.м</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="N4">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -86,7 +86,7 @@
                             <p class="txt">Время протяжки материалов и первоначальной настройки, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T4">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -94,7 +94,7 @@
                             <p class="txt">Время корректировки настроек, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T5">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -102,7 +102,7 @@
                             <p class="txt">Время упаковки, идентификации и демонтажа полуфабриката, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T6">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -110,7 +110,7 @@
                             <p class="txt">Время замены бочки с клеем, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T7">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -118,7 +118,7 @@
                             <p class="txt">Скорость полива, м/мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="V">
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             <p class="txt">Размер партии полива, пог.м</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="M">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -136,7 +136,7 @@
                             <p class="txt">Граммаж клея, г</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="G">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -144,7 +144,7 @@
                             <p class="txt">Продолжительность рабочей смены, час</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T10">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -152,7 +152,7 @@
                             <p class="txt">Ширина полива, мм</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="L">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -160,7 +160,7 @@
                             <p class="txt">Время чистки головки и уборки, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T8">
                         </div>
                     </div>
                     <div class="input-block-wrapper">
@@ -168,7 +168,7 @@
                             <p class="txt">Время чистки головки и уборки, мин</p>
                         </div>
                         <div class="input-block-wrapper-work-area">
-                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp">
+                            <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T9">
                         </div>
                     </div>
 
@@ -185,7 +185,7 @@
                             <p class="result-title">Намотка джамбо готового полуфабриката вспомогательные операции</p>
                         </div>
                         <div class="result-block-wrapper-answer">
-                            <p class="result-title">0</p>
+                            <p class="result-title" id="HelpOperation">0</p>
                         </div>
                     </div>
                     <div class="result-block-wrapper">
@@ -193,7 +193,7 @@
                             <p class="result-title">Время производства одного джамбо, включая вспомогательные операции, исключая ежесменные операции</p>
                         </div>
                         <div class="result-block-wrapper-answer">
-                            <p class="result-title">0</p>
+                            <p class="result-title" id="T0">0</p>
                         </div>
                     </div>
                     <div class="result-block-wrapper">
@@ -201,7 +201,7 @@
                             <p class="result-title">Коэффициент для учета влияния ежесменных операций </p>
                         </div>
                         <div class="result-block-wrapper-answer">
-                            <p class="result-title">0</p>
+                            <p class="result-title" id="K">0</p>
                         </div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                             <p class="result-title">Время производства одного джамбо в минутах с учётом коэффициента</p>
                         </div>
                         <div class="result-block-wrapper-answer">
-                            <p class="result-title">0</p>
+                            <p class="result-title" id="T">0</p>
                         </div>
                     </div>
                     <div class="result-block-wrapper">
@@ -219,10 +219,10 @@
                             <p class="result-title">Производительность в погонных метрах за смену</p>
                         </div>
                         <div class="result-block-wrapper-answer">
-                            <p class="result-title">0</p>
+                            <p class="result-title" id="P">0</p>
                         </div>
                     </div>
-                    <input type="button" value="Выгрузить pdf-файл" class="wrapper-result-block-btn">
+                    <button class="wrapper-result-block-btn" id="wrBtn">Выгрузить pdf-файл</button>
                 </div>
             </div>
             <!-- End result blocks -->
