--- a/line1.html
+++ b/line1.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <div id="invoice">
-        <!-- Strart header blocks -->
-        <header class="header">
-            <div class="header-block">
-                <h1 class="header-block-title">Калькулятор линия полива №1</h1>
-            </div>
-            <nav class="navigation-menu">
-                <a href="line1.html" class="nav-menu__link">Линия 1</a>
-                <a href="index.html" class="nav-menu__link">Линия 2</a>
-            </nav>
-        </header>
 
+    <!-- Strart header blocks -->
+    <header class="header">
+        <div class="header-block">
+            <h1 class="header-block-title">Калькулятор линия полива №1</h1>
+        </div>
+        <nav class="navigation-menu">
+            <a href="line1.html" class="nav-menu__link">Линия 1</a>
+            <a href="index.html" class="nav-menu__link">Линия 2</a>
+        </nav>
+    </header>
+    <div id="demo">
         <!-- End header blocks -->
         <main class="wrap">
             <div class="wrapper">
@@ -31,42 +31,42 @@
                     <div class="wrapper-input-block">
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Время нагрева бочки с клеем, мин</p>
+                                <p class="txt">Время нагрева бака с клеем, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp item" id="T1" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp item" id="T_1" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Время демонтажа шпули из-под пленки и монтажа новой пленки со склейкой, мин</p>
+                                <p class="txt">Время демонтажа шпули из-под основы и монтажа новой основы со склейкой, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="3" class="inp item" id="T2" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="3" class="inp item" id="T_2" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Время демонтажа шпули из-под лайнера и монтажа нового лайнера со склейкой, мин</p>
+                                <p class="txt">Время демонтажа шпули из-под лайнера (буфера) и монтажа нового лайнера (буфера) со склейкой, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="3" class="inp item" id="T3" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="3" class="inp item" id="T_3" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Количество клея в бочке, кг</p>
+                                <p class="txt">Намотка сетки в джамбо, пог.м.</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="180" class="inp item" id="N1" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="180" class="inp item" id="N_1" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Намотка пленки в джамбо, пог.м</p>
+                                <p class="txt">Намотка основы в джамбо, пог.м.</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="N2" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="N_2" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -74,7 +74,7 @@
                                 <p class="txt">Намотка лайнера в джамбо, пог.м</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="N3" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="N_3" data-counter>
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                                 <p class="txt">Намотка готового полуфабриката, пог.м</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="1520" class="inp" id="N4" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="1520" class="inp" id="N_4" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -92,7 +92,7 @@
                                 <p class="txt">Время протяжки материалов и первоначальной настройки, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="25" class="inp" id="T4" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="25" class="inp" id="T_4" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -100,7 +100,7 @@
                                 <p class="txt">Время корректировки настроек, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="5" class="inp" id="T5" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="5" class="inp" id="T_5" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -108,15 +108,15 @@
                                 <p class="txt">Время упаковки, идентификации и демонтажа полуфабриката, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="2" class="inp" id="T6" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="2" class="inp" id="T_6" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Время замены бочки с клеем, мин</p>
+                                <p class="txt">Время демонтажа шпули из-под сетки и монтажа новой сетки со склейкой, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T7" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="10" class="inp" id="T_7" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -124,7 +124,7 @@
                                 <p class="txt">Скорость полива, м/мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="50" class="inp" id="V" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="50" class="inp" id="V_1" data-counter>
                             </div>
                         </div>
                     </div>
@@ -134,15 +134,15 @@
                                 <p class="txt">Размер партии полива, пог.м</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="15200" class="inp" id="M" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="15200" class="inp" id="M_1" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Граммаж клея, г</p>
+                                <p class="txt">Время установки банан-вала, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="20" class="inp" id="G" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="20" class="inp" id="T_11" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -150,23 +150,15 @@
                                 <p class="txt">Продолжительность рабочей смены, час</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="12" class="inp" id="T10" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="12" class="inp" id="T_10" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
                             <div class="input-block-wrapper-title">
-                                <p class="txt">Ширина полива, мм</p>
+                                <p class="txt">Время снятия банан-вала, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="1040" class="inp" id="L" data-count>
-                            </div>
-                        </div>
-                        <div class="input-block-wrapper">
-                            <div class="input-block-wrapper-title">
-                                <p class="txt">Время чистки головки и уборки, мин</p>
-                            </div>
-                            <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="15" class="inp" id="T8" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="1040" class="inp" id="T_12" data-counter>
                             </div>
                         </div>
                         <div class="input-block-wrapper">
@@ -174,21 +166,28 @@
                                 <p class="txt">Время чистки головки и уборки, мин</p>
                             </div>
                             <div class="input-block-wrapper-work-area">
-                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="60" class="inp" id="T9" data-count>
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="15" class="inp" id="T_8" data-counter>
+                            </div>
+                        </div>
+                        <div class="input-block-wrapper">
+                            <div class="input-block-wrapper-title">
+                                <p class="txt">Время обеденного перерыва, мин</p>
+                            </div>
+                            <div class="input-block-wrapper-work-area">
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="60" class="inp" id="T_9" data-counter>
                             </div>
                         </div>
 
                     </div>
                 </div>
                 <!-- End input data -->
-
                 <div class="wrapper-line"></div>
                 <!-- Strart result blocks -->
                 <div class="wrapper-result">
                     <div class="wrapper-result-block">
                         <div class="result-block-wrapper">
                             <div class="result-block-wrapper-title">
-                                <p class="result-title">Намотка джамбо готового полуфабриката вспомогательные операции</p>
+                                <p class="result-title">Намотка джамбо готового полуфабриката</p>
                             </div>
                             <div class="result-block-wrapper-answer">
                                 <p class="result-title" id="HelpOperation">0</p>
@@ -199,7 +198,7 @@
                                 <p class="result-title">Время производства одного джамбо, включая вспомогательные операции, исключая ежесменные операции</p>
                             </div>
                             <div class="result-block-wrapper-answer">
-                                <p class="result-title" id="T0">0</p>
+                                <p class="result-title" id="T_0">0</p>
                             </div>
                         </div>
                         <div class="result-block-wrapper">
@@ -207,7 +206,7 @@
                                 <p class="result-title">Коэффициент для учета влияния ежесменных операций </p>
                             </div>
                             <div class="result-block-wrapper-answer">
-                                <p class="result-title" id="K">0</p>
+                                <p class="result-title" id="K_1">0</p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +216,7 @@
                                 <p class="result-title">Время производства одного джамбо в минутах с учётом коэффициента</p>
                             </div>
                             <div class="result-block-wrapper-answer">
-                                <p class="result-title" id="T">0</p>
+                                <p class="result-title" id="T_">0</p>
                             </div>
                         </div>
                         <div class="result-block-wrapper">
@@ -225,10 +224,10 @@
                                 <p class="result-title">Производительность в погонных метрах за смену</p>
                             </div>
                             <div class="result-block-wrapper-answer">
-                                <p class="result-title" id="P">0</p>
+                                <p class="result-title" id="P_1">0</p>
                             </div>
                         </div>
-                        <button class="wrapper-result-block-btn" id="wrBtn" onclick="generatePDF()">Выгрузить pdf-файл</button>
+                        <button class="wrapper-result-block-btn" id="wrBtn" onclick="toPDF()">Выгрузить pdf-файл</button>
                     </div>
                 </div>
                 <!-- End result blocks -->
@@ -238,7 +237,7 @@
         <!-- Strart footer blocks -->
         <footer class="footer">
             <div class="footer-block">
-                <h2 class="footer-block-title">Калькулятор линия полива №2</h2>
+                <h2 class="footer-block-title">Калькулятор линия полива №1</h2>
             </div>
         </footer>
         <!-- End footer blocks -->
